# GrassrootTradeRobot

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md
.devcontainer/: .tmux.conf  Dockerfile  devcontainer.json
Brainstorm/: Readme.md
Brainstorm/Fail2Succeed/MDFeed/Gemini/: CMakeLists.txt  Readme.md  book_snapshot_delta_subscribe.cpp  market_data.cpp  parse_msg.cpp  sample_subscribe.cpp  tradable_md.cpp
Brainstorm/Fail2Succeed/MDFeed/Kraken/: Readme.md  sample_subscribe.cpp
Brainstorm/Fail2Succeed/MDFeed/Okx/: CMakeLists.txt  sample_subscribe.cpp
Brainstorm/Fail2Succeed/checkBuildSetup/: hw.cpp
